--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,10 +42,10 @@
 
         <GridLayout
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="210dp"
+            android:layout_marginTop="5dp"
             android:columnCount="2"
-            android:rowCount="2">
+            android:rowCount="3">
 
             <com.google.android.material.textview.MaterialTextView
                 android:text="@string/username_label"
@@ -101,13 +101,37 @@
                     android:focusable="false"/>
 
             </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:text="@string/tier"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_columnWeight="0.05"
+                android:layout_marginTop="18dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_column="1"
+                android:layout_row="2"
+                android:layout_columnWeight="1"
+                android:layout_marginTop="20dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tier_profile"
+                    android:layout_width="274dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/button"
+                    android:focusable="false"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
         </GridLayout>
-        <!--        <Button-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_gravity="center"-->
-        <!--            android:text="@string/edit_avatar"-->
-        <!--            />-->
 
         <Button
             android:id="@+id/update_button"
