--- a/app/src/main/res/layout/item_coffee_place.xml
+++ b/app/src/main/res/layout/item_coffee_place.xml
@@ -101,10 +101,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/bookmark_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"  />
+<!--        <ImageButton-->
+<!--            android:id="@+id/bookmark_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content" />-->
 
         <View
             android:layout_width="0dp"
