--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,22 +4,20 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/coffee_24px"
-        android:title="@string/title_home" />
-
-<!--    <item-->
-<!--        android:id="@+id/navigation_streaming"-->
-<!--        android:icon="@drawable/smart_display_24px"-->
-<!--        android:title="@string/title_streaming" />-->
+        android:title="@string/title_home"
+        android:tint="@color/quite_brown" />
 
     <item
         android:id="@+id/navigation_account"
         android:icon="@drawable/account_circle_24px"
-        android:title="@string/title_account" />
+        android:title="@string/title_account"
+        android:tint="@color/quite_brown" />
 
     <item
         android:id="@+id/navigation_setting"
         android:icon="@drawable/settings_24px"
-        android:title="@string/title_setting" />
+        android:title="@string/title_setting"
+        android:tint="@color/quite_brown" />
 
 
 
