--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:editTextColor">#000000</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:iconTint">@color/quite_brown</item>
+
     </style>
 </resources>
