--- a/app/src/main/res/drawable/near_me_24px.xml
+++ b/app/src/main/res/drawable/near_me_24px.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="960"
     android:viewportHeight="960"
-    android:tint="?attr/colorControlNormal">
+    android:tint="@color/quite_brown">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M516,840L402,558L120,444L120,388L840,120L572,840L516,840ZM542,692L704,256L268,418L464,496L542,692ZM464,496L464,496L464,496L464,496Z"/>
