--- a/app/src/main/res/layout/activity_viet_map_map_view.xml
+++ b/app/src/main/res/layout/activity_viet_map_map_view.xml
@@ -130,24 +130,15 @@
                         android:orientation="horizontal"
                         android:padding="2dp">
 
-                        <!--                        <ImageButton-->
-                        <!--                            android:id="@+id/bookmark"-->
-                        <!--                            android:layout_width="wrap_content"-->
-                        <!--                            android:layout_height="wrap_content"-->
-                        <!--                            android:src="@drawable/bookmark_24px"-->
-                        <!--                            android:layout_toRightOf="@+id/startNavigation"-->
-                        <!--                            android:onClick="bookmarkPlace"-->
-                        <!--                            />-->
-
                         <TextView
                             android:id="@+id/place_name"
-                            android:layout_width="wrap_content"
+                            android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:text="@string/hello_world"
                             android:textColor="@color/quite_brown"
-                            android:textStyle="bold"
-                            android:textSize="22sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
                         <ImageButton
                             android:id="@+id/findRoute"
@@ -170,6 +161,7 @@
                             android:id="@+id/bookmarkPlace"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
                             android:src="@drawable/bookmark_24px"
                             android:layout_toRightOf="@+id/startNavigation"
                             />
@@ -193,7 +185,7 @@
                         <ImageView
                             android:id="@+id/coffee_thumbnail"
                             android:layout_width="164dp"
-                            android:layout_height="147dp"
+                            android:layout_height="169dp"
                             android:layout_marginStart="12dp" />
 
                         <LinearLayout
