--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -73,7 +73,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/near_me_ps"
+                android:text="@string/suggest_ps"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:gravity="center"/>
@@ -276,7 +276,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/suggest_ps"
+                android:text="@string/add_place"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:gravity="center"/>
